<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/username"
            android:layout_below="@id/intro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:layout_margin="50dp"/>
        <TextView
            android:id="@+id/participateQuestion"
            android:layout_below="@id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/participateText"
            android:textColor="#ffffffff"
            android:textSize="16sp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/participateGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/participateQuestion">

            <RadioButton android:id="@+id/participate_yes"
                android:layout_below="@id/participateQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participate_yes"
                android:padding="20dp"/>
            <RadioButton android:id="@+id/participate_no"
                android:layout_below="@id/participate_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participate_no"
                android:padding="10dp"/>
        </RadioGroup>
        <Button
            android:id="@+id/login_button"
            android:layout_below="@id/participateGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:onClick="login"
            android:layout_margin="50dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</ScrollView>